force-app/main/default/objects/Porsamarket__c/Porsamarket__c.object-meta.xml
<CustomObject>
    <description>Se almacenan los registros de los envío de PM cuando no se guarda nada en Salesforce</description>
    <label>Porsamarket</label>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>PorsamarketRegisters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Porsamarkets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>