force-app/main/default/objects/Porsamarket__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Id del Account de Porsamarket</description>
    <label>Account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>