force-app/main/default/objects/Porsamarket__c/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <description>Email del usuario propietario</description>
    <label>Owner Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>