force-app/main/default/objects/Porsamarket__c/fields/PorsamarketService__c.field-meta.xml
<CustomField>
    <fullName>PorsamarketService__c</fullName>
    <description>Código del servicio de Porsamarket: HH, IT, FR, etc</description>
    <label>Porsamarket Service</label>
    <length>25</length>
    <type>Text</type>
</CustomField>