force-app/main/default/objects/Porsamarket__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Id del proyecto en Porsamarket</description>
    <label>Project</label>
    <length>25</length>
    <type>Text</type>
</CustomField>